--- a/style.css
+++ b/style.css
@@ -59,5 +59,17 @@ main {
   font-size: 18px;
   font-weight: 600;
   padding: 24px 32px 32px;
+}
 
+#made {
+    font-size: 14px;
+    color: #444444;
+    text-align: center;
+    margin-top: 5px;
+    padding-bottom: 5px;
+}
+
+#made a {
+    color: #8d8d8d;
+    text-decoration: none;
 }
